chore: update package json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "my-qwik-library-name",
-  "version": "0.0.1",
+  "name": "qwik-rewards",
+  "version": "0.0.0",
   "description": "Create a reusable Qwik component library",
+  "author": "gustavocadev",
+  "license": "MIT",
   "main": "./lib/index.qwik.mjs",
   "qwik": "./lib/index.qwik.mjs",
   "types": "./lib-types/index.d.ts",
@@ -30,20 +32,20 @@
     "fmt": "prettier --write .",
     "fmt.check": "prettier --check .",
     "lint": "eslint \"src/**/*.ts*\"",
-    "release": "np",
+    "release": "changeset publish",
     "start": "vite --open --mode ssr",
     "test": "echo \"No test specified\" && exit 0",
     "qwik": "qwik"
   },
   "devDependencies": {
     "@builder.io/qwik": "1.2.10",
+    "@changesets/cli": "^2.26.2",
     "@types/eslint": "8.44.1",
     "@types/node": "^20.4.5",
     "@typescript-eslint/eslint-plugin": "6.2.0",
     "@typescript-eslint/parser": "6.2.0",
     "eslint": "8.45.0",
     "eslint-plugin-qwik": "latest",
-    "np": "7.6.1",
     "prettier": "3.0.0",
     "typescript": "5.1.6",
     "undici": "5.22.1",
