--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install --no-frozen-lockfile
 
+      - name: Build command
+        run: pnpm run build
+
       - name: Create Release Pull Request or Publish
         id: changesets
         uses: changesets/action@v1
