--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "fmt.check": "prettier --check .",
     "lint": "eslint \"src/**/*.ts*\"",
     "release": "changeset publish",
+    "np:publish": "np",
     "start": "vite --open --mode ssr",
     "test": "echo \"No test specified\" && exit 0",
     "qwik": "qwik"
@@ -46,6 +47,7 @@
     "@typescript-eslint/parser": "6.2.0",
     "eslint": "8.45.0",
     "eslint-plugin-qwik": "latest",
+    "np": "8.0.4",
     "prettier": "3.0.0",
     "typescript": "5.1.6",
     "undici": "5.22.1",
