--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,27 +9,24 @@ jobs:
   release:
     runs-on: 'ubuntu-latest'
     steps:
-      - name: Checkout code
+      - name: Checkout code (Cloning the repository in the virtual machine)
         uses: actions/checkout@v3
 
       - name: Setup pnpm for all the virtual machine
         uses: pnpm/action-setup@v2
         with:
-          version: 7
+          version: 8
 
-      - name: Setup a especific node version
+      - name: Setup a especific node version for the virtual machine
         uses: actions/setup-node@v3
         with:
           node-version: 18.x
           cache: 'pnpm'
 
-      - name: Install dependencies
+      - name: Install dependencies with pnpm in the virtual machine
         run: pnpm install --no-frozen-lockfile
 
-      - name: Build command
-        run: pnpm run build
-
-      - name: Create Release Pull Request or Publish
+      - name: Create Release Pull Request or Publish to npm
         id: changesets
         uses: changesets/action@v1
         with:
